# pandasklar

./: .gitignore  LICENSE  README.ipynb  README.md  publish.ipynb  publish_pak.ipynb  publish_pandasklar.ipynb  pyproject.toml  run_pytest.ipynb
jupyter/: 02_grid_dtale.ipynb  04_dataframe.ipynb  05_Zufallsdaten.ipynb  08_Create_DataFrames_Easily.ipynb  10_Create_Random_Data.ipynb  11_Analyse_und_Types.ipynb  12_Review_and_Visualize.ipynb  12_analyse_freqs.ipynb  13_Analyse_Datatypes.ipynb  13_Spalten.ipynb  14_Analyse_Frequencies.ipynb  14_Zeilen.ipynb  15_Analyse_Redundancy.ipynb  16_Compare_Series_and_DataFrames.ipynb  16_Select_auswählen_und_filtern.ipynb  20_Zahlen.ipynb  21_Manage_Columns.ipynb  22_Manage_Rows.ipynb  22_Strings.ipynb  23_Let_DataFrames_Interact.ipynb  23_Strings2.ipynb  24_Create_DataFrames_Easily.ipynb  25_Save_and_Load_Data.ipynb  26_Category.ipynb  30_Schreiben.ipynb  31_Schreiben_update_col.ipynb  31_Work_with_NaN.ipynb  33_Insert.ipynb  35_Scale_Numbers.ipynb  36_Cleanup_Strings.ipynb  37_Slice_Strings_Variably.ipynb  38_Search_Strings_Fast.ipynb  39_Work_with_Lists.ipynb  49 === GROUPING =========================.ipynb  50_Duplikate.ipynb  51_Unterschiede.ipynb  52_Rank_Rows.ipynb  52_Ranking.ipynb  54_Gruppierungen.ipynb  55_Aggregate_Rows.ipynb  (+14 more)
jupyter/data/: df0.pickle  df0.xlsx  persistenz.json
jupyter/data_old/: df0.pickle  foo  lines.html  persistenz.feather  persistenz.pickle  test_o.pickle
jupyter_privat/: 36_Analyse_Scaling.ipynb  96_Visualisierung ###.ipynb  Untitled.ipynb  update_col.ipynb
src/pandasklar/: __init__.py  __main__.py  aggregate.py  analyse.py  compare.py  config.py  content.py  dataframe.py  develop.py  grid.py  pandas.py  plot.py  rank.py  scale.py  string.py  subsets.py  type_info.py  type_info_pandas.py  type_info_polars.py  values_info.py
tests/: some_utils.py  test_aggregate.py  test_analyse.py  test_analyse_analyse_datatypes.py  test_analyse_analyse_freqs.py  test_analyse_change_datatype.py  test_analyse_copy_datatype.py  test_analyse_redundancy.py  test_compare.py  test_compare_dataframes.py  test_compare_get_different_rows.py  test_compare_series.py  test_content.py  test_dataframe.py  test_develop.py  test_subsets.py  test_type_info_pandas.py  test_values_info.py
