# pyproject.toml


[project]
name            = "pandasklar"
version         = "0.2.0"    

requires-python = ">=3.8"
dependencies    = ['pandas','numpy','perlin_noise','termcolor','bpyth','blab',]

authors        = [{ name = "djekra", email = "hopsalla@gmail.com" }]
description     = "Toolbox / Ecosystem for data science. Easier handling of pandas, especially when thinking in SQL."
readme          = "README.md"
license         = {text = "MIT"}
classifiers     = [
                  "Programming Language :: Python :: 3",
                  "License :: OSI Approved :: MIT License",
                  "Operating System :: OS Independent",
]

#keywords       = ["one", "two"]
#dynamic        = ["version"]


#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]


# optional: dtale, termcolor
# unbedingt: pandas, numpy


[project.urls]
Homepage = "https://github.com/djekra/pandasklar"


[project.scripts]
pandasklar = "pandasklar.__main__:main"


[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# Additional package data

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
blab = ['*.txt', '*.ipynb']





